--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -10,7 +10,7 @@
             android:title="@string/changelog_title">
             <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.salvagemod.salvageparts"
-                android:targetClass="com.salvagemod.salvageparts.ChangeLog" />
+                android:targetClass="com.salvagemod.salvageparts.activities.ChangeLog" />
         </PreferenceScreen>
 
     </PreferenceCategory>
