--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -5,6 +5,12 @@
     <PreferenceCategory android:key="general_category"
         android:title="@string/general_title">
 
+   <PreferenceScreen android:key="cpu_settings" android:title="@string/cpu_title" android:summary="@string/cpu_summary">
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.salvagemod.salvageparts"
+                android:targetClass="com.salvagemod.salvageparts.activities.CPUActivity" />
+        </PreferenceScreen>
+
         <!-- Change Log -->
         <PreferenceScreen android:key="changelog"
             android:title="@string/changelog_title">
