--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -47,4 +47,68 @@
         <item>9</item>
     </string-array>
 
+   <string-array name="entries_brightness_widget" formatted="false">
+        <item>Auto-4-10</item>
+        <item>Auto-2-5-7-10</item>
+        <item>Auto-2-10</item>
+        <item>Dim-10</item>
+    </string-array>
+
+   <string-array name="values_brightness_widget" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string-array name="entries_network_widget">
+        <item>2G/3G+2G</item>  
+        <item>2G/3G Only</item>   
+        <item>2G/3G Only/3G+2G</item>
+    </string-array>
+
+    <string-array name="values_network_widget" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
+    <string-array name="entries_screentimeout_widget">
+        <item>15s/1m/5m</item>
+        <item>30s/2m/5m</item>
+    </string-array>
+
+    <string-array name="values_screentimeout_widget" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
+    <string-array name="entries_ring_widget">
+        <item>Sound+Vibrate/Vibrate</item>
+        <item>Sound/Vibrate</item>
+        <item>Sound/Silent</item>
+        <item>Sound+Vib/Vib/Silent</item>
+        <item>Sound/Vibrate/Silent</item>
+        <item>Sound+Vibrate/Sound/Vibrate/Silent</item>
+    </string-array>
+
+    <string-array name="values_ring_widget" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+
+    <string-array name="entries_flash_widget">
+        <item>Normal</item>
+        <item>High / Death Ray</item>
+    </string-array>
+
+    <string-array name="values_flash_widget" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
 </resources>
