--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -111,4 +111,12 @@
         <item>1</item>
     </string-array>
 
+    <string-array name="entries_heapsize">
+        <item>12m</item>
+        <item>16m</item>
+        <item>24m</item>
+        <item>32m</item>
+	 <item>64m</item>
+    </string-array>
+
 </resources>
