--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -5,6 +5,18 @@
     <PreferenceCategory android:key="general_category"
         android:title="@string/general_title">
 
+        <!-- Device Hostname -->
+        <com.salvagemod.salvageparts.preferences.HostnamePreference
+            android:key="device_hostname"
+            android:title="@string/device_hostname"
+            android:dialogTitle="@string/device_hostname"
+            android:positiveButtonText="@string/hostname_save"
+            android:negativeButtonText="@string/hostname_cancel"
+            android:selectAllOnFocus="true"
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:persistent="false" />
+
         <!-- Change Log -->
         <PreferenceScreen android:key="changelog"
             android:title="@string/changelog_title">
