--- a/res/xml/ui_settings.xml
+++ b/res/xml/ui_settings.xml
@@ -30,11 +30,10 @@
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/ui_lcdd_title">
-       <EditTextPreference 
-	    android:key="pref_lcdd"
-	    android:name="Lcd Density Preference"
-            android:title="@string/pref_lcdd_title"
-            android:summary="@string/pref_lcdd_summary"
-	    android:numeric="integer"  />
+       <ListPreference android:key="pref_lcdd"
+            android:dialogTitle="@string/pref_lcdd_title"
+            android:title="@string/pref_lcdd_title" android:summary="@string/pref_lcdd_summary"
+            android:entries="@array/entries_lcdd"
+            android:entryValues="@array/entries_lcdd" />
     </PreferenceCategory>
 </PreferenceScreen>
