Add a note in mod information letting users know they are running nightly builds which may contain bugs. *hopefully* keep away some nightly bug reports. Simply remove this preference when ready to release an update.

--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -5,6 +5,12 @@
     <PreferenceCategory android:key="general_category"
         android:title="@string/general_title">
 
+        <!-- Nightly Disclaimer -->
+        <PreferenceScreen
+	    android:title="@string/nightly_title"
+            android:summary="@string/nightly_disclaimer">
+        </PreferenceScreen>
+
         <!-- Device Hostname -->
         <com.salvagemod.salvageparts.preferences.HostnamePreference
             android:key="device_hostname"
