--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -116,7 +116,64 @@
         <item>16m</item>
         <item>24m</item>
         <item>32m</item>
-	 <item>64m</item>
+		<item>64m</item>
     </string-array>
+
+	<!-- Lockscreen -->
+    <string-array name="pref_lockscreen_delay_entries">
+        <item>Immediately</item>
+        <item>1s</item>
+        <item>5s</item>
+        <item>10s</item>
+        <item>15s</item>  
+        <item>30s</item>
+        <item>1m</item>
+        <item>5m</item>
+        <item>10m</item>
+        <item>30m</item>
+    </string-array>
+
+    <string-array name="pref_lockscreen_delay_values" translatable="false">
+        <item>0</item>
+        <item>1000</item>
+        <item>5000</item>
+        <item>10000</item>
+        <item>15000</item>
+        <item>30000</item>
+        <item>60000</item>
+        <item>300000</item>
+        <item>600000</item>
+        <item>1800000</item>
+    </string-array>
+
+    <string-array name="pref_lockscreen_style_entries">
+        <item>Sliding Tab</item>
+        <item>Rotary</item>
+        <item>Rotary revamped</item>
+        <item>Lense</item>
+    </string-array>
+
+    <string-array name="pref_lockscreen_style_values" translatable="false">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
+
+    <string-array name="pref_lockscreen_music_headset_entries">
+        <item>Disabled</item>
+        <item>Wired Headset</item>
+        <item>Bluetooth A2DP Headset</item>
+        <item>Both</item>
+    </string-array>
+
+    <string-array name="pref_lockscreen_music_headset_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    
 
 </resources>
