--- a/res/xml/lockscreen_settings.xml
+++ b/res/xml/lockscreen_settings.xml
@@ -1,26 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <PreferenceCategory android:title="@string/general_title">
+    <PreferenceCategory android:title="@string/general_title"
+        android:key="pref_category_button_settings">
 
-        <CheckBoxPreference android:key="lockscreen_music_controls"
-            android:title="@string/pref_lockscreen_music_controls_title"
-            android:summary="@string/pref_lockscreen_music_controls_summary" />
+        <PreferenceScreen android:key="lockscreen_stylecfg"
+            android:title="@string/pref_lockscreen_stylecfg_title"
+            android:summary="@string/pref_lockscreen_stylecfg_summary">
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.salvagemod.salvageparts"
+                android:targetClass="com.salvagemod.salvageparts.activities.LockscreenStyleActivity" />
+        </PreferenceScreen>
 
-        <CheckBoxPreference android:key="pref_lockscreen_now_playing"
-            android:title="@string/pref_lockscreen_now_playing_title"
-            android:summary="@string/pref_lockscreen_now_playing_summary"
-            android:dependency="lockscreen_music_controls" />
+        <PreferenceScreen android:key="lockscreen_widgets"
+            android:title="@string/pref_lockscreen_widgets_title"
+            android:summary="@string/pref_lockscreen_widgets_summary">
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.salvagemod.salvageparts"
+                android:targetClass="com.salvagemod.salvageparts.activities.LockscreenWidgetsActivity" />
+        </PreferenceScreen>
 
-        <CheckBoxPreference android:key="pref_lockscreen_album_art"
-            android:title="@string/pref_lockscreen_album_art_title"
-            android:summary="@string/pref_lockscreen_album_art_summary"
-            android:dependency="lockscreen_music_controls" />
+        <PreferenceScreen android:key="lockscreen_unlock"
+            android:title="@string/pref_lockscreen_unlock_title"
+            android:summary="@string/pref_lockscreen_unlock_summary">
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.salvagemod.salvageparts"
+                android:targetClass="com.salvagemod.salvageparts.activities.LockscreenUnlockActivity" />
+        </PreferenceScreen>
 
-        <CheckBoxPreference android:key="lockscreen_always_music_controls"
-            android:dependency="lockscreen_music_controls"
-            android:title="@string/pref_lockscreen_always_music_controls_title"
-            android:summary="@string/pref_lockscreen_always_music_controls_summary" />
+        <PreferenceScreen android:key="lockscreen_timeout"
+            android:title="@string/pref_lockscreen_timeout_title"
+            android:summary="@string/pref_lockscreen_timeout_summary">
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.salvagemod.salvageparts"
+                android:targetClass="com.salvagemod.salvageparts.activities.LockscreenTimeoutActivity" />
+        </PreferenceScreen>
 
     </PreferenceCategory>
 
