semi removed indicator color

--- a/res/xml/ui_power_widget_settings.xml
+++ b/res/xml/ui_power_widget_settings.xml
@@ -9,9 +9,10 @@
 		<CheckBoxPreference android:key="expanded_hide_onchange"
 			android:title="@string/title_expanded_hide_onchange" android:summary="@string/summary_expanded_hide_onchange"
 			android:defaultValue="false" android:dependency="expanded_widget" />
-		<Preference android:key="expanded_color_mask"
+<!--		<Preference android:key="expanded_color_mask"
 			android:title="@string/expanded_color_mask" android:summary="@string/expanded_color_mask"
 			android:defaultValue="-1" android:dependency="expanded_widget" />
+-->
 		<PreferenceScreen android:key="widget_picker"
 			android:title="@string/title_widget_picker" android:summary="@string/summary_widget_picker">
 			<intent android:action="android.intent.action.MAIN"
