Revert "comment out album lockscreen because we need to release soon =/"
This reverts commit 3bcacd3778943f90262c2f115f96151d977f150c.

--- a/res/xml/lockscreen_widgets_settings.xml
+++ b/res/xml/lockscreen_widgets_settings.xml
@@ -23,10 +23,10 @@
             android:summary="@string/pref_lockscreen_now_playing_summary"
             android:dependency="lockscreen_music_controls" />
 
-<!--        <CheckBoxPreference android:key="pref_lockscreen_album_art"
+        <CheckBoxPreference android:key="pref_lockscreen_album_art"
             android:title="@string/pref_lockscreen_album_art_title"
             android:summary="@string/pref_lockscreen_album_art_summary"
-            android:dependency="lockscreen_music_controls" /> -->
+            android:dependency="lockscreen_music_controls" />
 
         <ListPreference android:key="pref_lockscreen_music_headset"
             android:dependency="lockscreen_music_controls"
